--- a/pakalpojumi-ru.html
+++ b/pakalpojumi-ru.html
@@ -86,9 +86,9 @@
 					<span>Восстановление покрытия полиуретановой аэрозольной краской.</span><br>
 					<span>Полировка покрытия гелькоута.</span><br>
 					<span>Восстановление поверхностей, пострадавших от осмоса, включая ремонт слоев стекловолокна, подвергшихся воздействию осмоса.</span><br>
-					<a href="servis_image/ScriptCSSbenzin.png" target="_blank"><img src="servis_image/ScriptCSSbenzin.png" width="600" alt="Motortester CSS"/></a><br><br>
+					<a href="servis_image/osmoze.jpg" target="_blank"><img src="servis_image/osmoze.jpg" width="600" alt="Motortester CSS"/></a><br><br>
 					<span>Нанесение нерастущей краски, применяется к плавучим судам, находящимся в водоеме в течение всего сезона.</span><br>
-					<a href="servis_image/ScriptPX.png" target="_blank"><img src="servis_image/ScriptPX.png" width="600" alt="Motortester Px"/></a><br><br>
+					<a href="servis_image/antifouling.jpg" target="_blank"><img src="servis_image/antifouling.jpg" width="600" alt="Motortester Px"/></a><br><br>
 				</p>
 				<div class="benzina-atvert-ru">Читать дальше:</div>
 			</div>
