--- a/pakalpojumi.html
+++ b/pakalpojumi.html
@@ -86,9 +86,9 @@
 					<span>Pārklājuma atjaunošana ar poliuretāna krāsu ar pulverizatoru.</span><br>
 					<span>Gelkouta virsmu pulēšana.</span><br>
 					<span>Osmozes skarto virsmu atjaunošana, ieskaitot osmozes skarto stiklašķiedras slāņu remontu.</span><br>
-					<a href="servis_image/ScriptCSSbenzin.png" target="_blank"><img src="servis_image/ScriptCSSbenzin.png" width="600" alt="Motortester CSS"/></a><br><br>
+					<a href="servis_image/osmoze.jpg" target="_blank"><img src="servis_image/osmoze.jpg" width="600" alt="Motortester CSS"/></a><br><br>
 					<span>Neapaugošās krāsas uzklāšana, piemērojama peldlīdzekļiem, kas atrodas ūdenstilpnē visas sezones garumā.</span><br>
-					<a href="servis_image/ScriptPX.png" target="_blank"><img src="servis_image/ScriptPX.png" width="600" alt="Motortester Px"/></a><br><br>
+					<a href="servis_image/antifouling.jpg" target="_blank"><img src="servis_image/antifouling.jpg" width="600" alt="Motortester Px"/></a><br><br>
 				</p>
 				<div class="benzina-atvert">Lasīt tālāk:</div>
 			</div>
