--- a/pakalpojumi.html
+++ b/pakalpojumi.html
@@ -115,7 +115,7 @@
 					<span>Spēka elektrikas sistēmas novērtēšana (akumulators, starteris, ģenerators).<br>
 					Diagnostika tiek veikta izmantojot automobiļu oscilogrāfu (motortesteri), skripts ElPower.<br>
 					Ātri un efektīvi, bez komponentu noņemšanas, tiek novērtēti akumulatora, startera un ģeneratora tehniskias stāvoklis.<br>
-					<a href="servis_image/ElPower.PNG" target="_blank"><img src="servis_image/ElPower.PNG" width="590" alt="Script ElPower"/></a><br><br>
+					<a href="servis_image/ElPower.png" target="_blank"><img src="servis_image/ElPower.png" width="590" alt="Script ElPower"/></a><br><br>
 					Apgaismes, dažādu elektrisko sistēmu pārbaude un remonts.</span>
 				</p>
 				<div class="elektro-atvert">Lasīt tālāk:</div>
