--- a/pakalpojumi-ru.html
+++ b/pakalpojumi-ru.html
@@ -115,7 +115,7 @@
 					<span>Оценка силовой электросистемы (аккумулятор, стартер, генератор).<br>
 					Диагностика проводится с помощью автомобильного осциллографа (мотортестера), скрипт ElPower.<br>
 					Техническое состояние аккумуляторной батареи, стартера и генератора оценивается быстро и эффективно, без снятия компонентов.<br>
-					<a href="servis_image/ElPower.PNG" target="_blank"><img src="servis_image/ElPower.PNG" width="590" alt="Script ElPower"/></a><br><br>
+					<a href="servis_image/ElPower.png" target="_blank"><img src="servis_image/ElPower.png" width="590" alt="Script ElPower"/></a><br><br>
 					Обследование и ремонт различных электрических систем.</span>
 				</p>
 				<div class="elektro-atvert-ru">Читать дальше:</div>
