--- a/pakalpojumi-ru.html
+++ b/pakalpojumi-ru.html
@@ -67,15 +67,7 @@
 	</nav>
 	<!--____________________________________SECTION PAKALPOJUMI______________________________________-->
 	<main id="centr-pakalpojumi">
-		<h2 class="color-light heading">Цены</h2>
-		<div class="pakalpojumi-cenas">
-			
-			<div class="virsraksts-cenas">Часовая ставка</div>
-			<div class="cenas-item"> <span class="cenas-p">Ремонт изделий из стеклопластика и корпусов лодок</span> <span class="cenas-c">10€/час</span> </div>
-			<div class="cenas-item"> <span class="cenas-p">BRP Sea doo, Ski doo, ATV Диагностика и ремонт</span> <span class="cenas-c">20€/час</span> </div>
-			<div class="cenas-item"> <span class="cenas-p">Диагностика и ремонт электросистем</span> <span class="cenas-c">20€/час</span> </div>
-			<div class="cenas-item"> <span class="cenas-p">Диагностика и ремонт трансмиссии и ходовой части</span> <span class="cenas-c">15€/час</span> </div>
-		</div>
+		
 		<h2 class="color-light heading">Описание услуг</h2>
 		<div class="pakalpojumi pakalpojumi-benzina">
 			<img src="servis_image/200x200_laiva.png" alt="Gasoline engine"/>
@@ -130,7 +122,20 @@
 				</p>
 			</div>
 		</div>
-		
+		<h2 class="color-light heading">Цены</h2>
+		<div class="pakalpojumi-cenas">
+			<div class="virsraksts-cenas">Оценка стоимости ремонта</div>
+			<div class="cenas-novertet">
+				<span>Если вы хотите получить оценку стоимости ремонта изделий из стеклопластика и корпусов лодок, отправьте описание с фото на электронную почту:</span>
+				<span><a href = "mailto: laivuserviss@yandex.lv">laivuserviss@yandex.lv</a></span>
+				<span>Ориентировочную стоимость ремонта мы дадим вам в течение нескольких дней.</span>
+			</div><br>
+			<div class="virsraksts-cenas">Часовая ставка</div>
+			<div class="cenas-item"> <span class="cenas-p">Ремонт изделий из стеклопластика и корпусов лодок</span> <span class="cenas-c">10€/час</span> </div>
+			<div class="cenas-item"> <span class="cenas-p">BRP Sea doo, Ski doo, ATV Диагностика и ремонт</span> <span class="cenas-c">20€/час</span> </div>
+			<div class="cenas-item"> <span class="cenas-p">Диагностика и ремонт электросистем</span> <span class="cenas-c">20€/час</span> </div>
+			<div class="cenas-item"> <span class="cenas-p">Диагностика и ремонт трансмиссии и ходовой части</span> <span class="cenas-c">15€/час</span> </div>
+		</div>
 	</main>
 	<footer> <a class="uzaugsu2" href="#"><img src="servis_image/ToTop2-white.png" height="45" alt="To-Top"/></a>
 		<p>&#169; LAIVU SERVISS 2020</p>
