--- a/pakalpojumi.html
+++ b/pakalpojumi.html
@@ -67,15 +67,6 @@
 	</nav>
 	<!--____________________________________SECTION PAKALPOJUMI______________________________________-->
 	<main id="centr-pakalpojumi">
-		<h2 class="color-light heading">Cenas</h2>
-		<div class="pakalpojumi-cenas">
-			
-			<div class="virsraksts-cenas">Stundas likme</div>
-			<div class="cenas-item"> <span class="cenas-p">Stiklaplasta izstrādājumu un laivu korpusu remonts</span> <span class="cenas-c">10€/stunda</span> </div>
-			<div class="cenas-item"> <span class="cenas-p">BRP Seadoo, Skidoo, ATV diagnostika un remonts</span> <span class="cenas-c">20€/stunda</span> </div>
-			<div class="cenas-item"> <span class="cenas-p">Elektro sistēmas diagnostika un remonts</span> <span class="cenas-c">20€/stunda</span> </div>
-			<div class="cenas-item"> <span class="cenas-p">Transmisijas un ritošās daļas diagnostika un remonts</span> <span class="cenas-c">15€/stunda</span> </div>
-		</div>
 		<h2 class="color-light heading">Pakalpojumu apraksts</h2>
 		<div class="pakalpojumi pakalpojumi-benzina">
 			<img src="servis_image/200x200_laiva.png" alt="Gasoline engine"/>
@@ -129,6 +120,20 @@
 					<span>ATV kvadriciklu bremžu sistēmas diagnostika un remonts.</span>
 				</p>
 			</div>
+		</div>
+		<h2 class="color-light heading">Cenas</h2>
+		<div class="pakalpojumi-cenas">
+			<div class="virsraksts-cenas">Remonta izmaksu novērtēšana</div>
+			<div class="cenas-novertet">
+				<span>Ja vēlaties saņemt izmaksu novērtējumu stiklaplasta izstrādājumu un laivu korpusu remontam, sūtiet aprakstu ar foto uz e-pastu:</span>
+				<span><a href = "mailto: laivuserviss@yandex.lv">laivuserviss@yandex.lv</a></span>
+				<span>Dažu dienu laikā mēs sniegsim jums aptuvenu remonta izmaksu novērtējumu</span>
+			</div><br>
+			<div class="virsraksts-cenas">Stundas likme</div>
+			<div class="cenas-item"> <span class="cenas-p">Stiklaplasta izstrādājumu un laivu korpusu remonts</span> <span class="cenas-c">10€/stunda</span> </div>
+			<div class="cenas-item"> <span class="cenas-p">BRP Seadoo, Skidoo, ATV diagnostika un remonts</span> <span class="cenas-c">20€/stunda</span> </div>
+			<div class="cenas-item"> <span class="cenas-p">Elektro sistēmas diagnostika un remonts</span> <span class="cenas-c">20€/stunda</span> </div>
+			<div class="cenas-item"> <span class="cenas-p">Transmisijas un ritošās daļas diagnostika un remonts</span> <span class="cenas-c">15€/stunda</span> </div>
 		</div>
 		
 	</main>
